--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "render-api-proxy",
   "version": "1.0.0",
   "main": "server.js",
-  "type": "module",
+  "private": true,
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.19.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^2.6.9"
   }
 }
